# getzero-os

./: .gitignore  .pypiignore  CALIBRATION_CHECKLIST.md  DEEP_TEST_RESULTS.md  DESIGN_SPEC.md  Dockerfile  ENGINE_SPEC.md  ENVY_INTEGRATION_SPEC.md  MANIFEST.in  SKILL.md  SPEC.md  STRATEGY_FIX_SPEC.md  V6_SPEC.md  astro.config.mjs  com.zero.card-push.plist  com.zero.morning-brief.plist  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  vercel.json  zero_skills_pyproject.toml
api/: dashboard.js  debug-envy.js  envy.js  waitlist.js
docs/: ARCHITECTURE_CONSISTENCY_AUDIT.md  DOCUMENT_INDEX.md  FIX_REGRESSION_VERIFICATION.md  ZERO_OS_SYSTEM_SPEC_V3.md
docs/specs/: progression-engagement-system.md
intel/: COMPETITIVE_INTEL.md
public/api/: portfolio.json
scanner/: AGENTS_SPEC.md  COGNITIVE_LOOP_SPEC.md  __init__.py  backtest_signals.py  backtester_taapi.py  config.yaml  exceptions.py  export_portfolio.py  fetch_history.py  generate_signals.py  hyperliquid_executor.py  install.sh  run_agents.py  run_cycle.sh  run_zero_live.sh  run_zero_paper.sh  signal_scanner.py  utils.py
scanner/agents/: adversary.py  adversary_evolution.py  correlation_agent.py  counterfactual.py  cross_timeframe_agent.py  envy_cache.py  execution_agent.py  funding_agent.py  genealogy.py  history_refresh.py  hl_enrichment.py  hypothesis_generator.py  observer.py  (+17 more)
scanner/skills/zero-trading/: README.md  SKILL.md  pyproject.toml
scanner/skills/zero-trading/competitive/: SKILL.md
scanner/skills/zero-trading/market-reading/: SKILL.md
scanner/skills/zero-trading/onboarding/: SKILL.md
scanner/skills/zero-trading/operator-comms/: SKILL.md
scanner/skills/zero-trading/pattern-recognition/: SKILL.md
scanner/skills/zero-trading/risk-management/: SKILL.md
scanner/skills/zero-trading/session-management/: SKILL.md
scanner/skills/zero-trading/strategy-selection/: SKILL.md
scanner/skills/zero-trading/zero_skills/: __init__.py
scanner/skills/zero-trading/zero_skills.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scanner/skills/zero-trading/zero_skills/skills/: SKILL.md
scanner/skills/zero-trading/zero_skills/skills/competitive/: SKILL.md
scanner/skills/zero-trading/zero_skills/skills/market-reading/: SKILL.md
scanner/skills/zero-trading/zero_skills/skills/operator-communication/: SKILL.md
scanner/skills/zero-trading/zero_skills/skills/risk-management/: SKILL.md
scanner/skills/zero-trading/zero_skills/skills/strategy-selection/: SKILL.md
scripts/: gen-og.html  seed_collective.py  sync-daemon.sh  tunnel_watchdog.sh
zero_skills/: README.md  __init__.py  _client.py  consensus.py  conviction.py  exit_intel.py  immune.py  network.py  regime.py
zeroos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+2035 files in other folders)
