[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-skills"
version = "1.0.0"
description = "Trading agent skills for the zero platform"
readme = "SKILL.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Zero Intelligence", email = "degenie@getzero.dev"}]
keywords = ["trading", "agent", "skills", "mcp", "hyperliquid", "zero"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://getzero.dev"
Documentation = "https://getzero.dev/docs"
Repository = "https://github.com/squaeragent/getzero-os"
Skills = "https://getzero.dev/skills/manifest.json"

[tool.setuptools]
packages = ["zero_skills"]
